Separate mixed operations with Curation vs Bookmark concerns